--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 .day {
-    font-size: 6rem;
+    font-size: 5rem;
     font-weight: 800;
     text-align: center;
 }
@@ -28,9 +28,41 @@ p {
   font-size: 1.25rem;
 }
 
+article {
+  border-bottom: 2px solid #f2f2f2;
+  margin-top: 50px;
+}
 article .content h2 {
   font-weight: 800;
   color: #000;
   font-size: 2rem;
-  text-align: center;
+  text-align: left;
+  margin: 26.50px 0 15px 0;
+}
+
+
+footer {
+  margin-bottom: 50px;
+}
+footer .tags a {
+  border-radius: 5px;
+  border: 1px solid blue;
+  padding: 2px 10px;
+}
+
+// Small screens
+
+/* Define mobile styles */
+@media only screen {
+  article .content h2 {
+    text-align: center;
+  }
+
+}
+
+/* max-width 640px, mobile-only styles, use when QAing mobile issues */
+@media only screen and (max-width: 40em) {
+  article .content h2 {
+    text-align: center;
+  }
 }
