--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -6,6 +6,11 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', sans-serif;
 }
 
+header {
+  height: 100%;
+  background: #0562dc;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -46,10 +51,27 @@ footer {
 }
 footer .tags a {
   border-radius: 5px;
-  border: 1px solid blue;
+  border: 1px solid #008CBA;
   padding: 2px 10px;
 }
 
+.scroller {
+  font-size: 42px;
+  width: 100%;
+  left: 0;
+  text-align: center;
+  bottom: 50px;
+  display: block;
+  position: absolute;
+}
+
+.scroller {
+  -webkit-animation: pulse 1.3s infinite;
+  animation: pulse 1.3s infinite;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
 // Small screens
 
 /* Define mobile styles */
