--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -5,6 +5,49 @@ html {
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', sans-serif;
 }
+aside {
+  position: fixed;
+  float: left;
+  background: aqua;
+  width: 240px;
+  height: 100%;
+  left: -240px;
+
+  background: #3f3f3f;
+  color: #fff;
+  z-index: 30;
+
+  padding-top: 40px;
+}
+aside h1 {
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 1.25em;
+}
+aside.open {
+  left: 0;
+
+}
+
+#aside-fade {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  cursor: pointer;
+  z-index: 20;
+
+}
+#aside-fade.open {
+pointer-events: auto;
+  background: rgba(0,0,0,0.6);
+
+}
+
 
 header {
   height: 100%;
@@ -63,15 +106,94 @@ footer .tags a {
   bottom: 50px;
   display: block;
   position: absolute;
+  color: #ffffff;
+  cursor: pointer;
 }
 
 .scroller {
-  -webkit-animation: pulse 1.3s infinite;
+  -webkit-animation: scroller 1.5s infinite; /* Safari 4+ */
+  -moz-animation:    scroller 1.5s infinite; /* Fx 5+ */
+  -o-animation:      scroller 1.5s infinite; /* Opera 12+ */
+  animation:         scroller 1.5s infinite; /* IE 10+, Fx 29+ */
+  /*-webkit-animation: pulse 1.3s infinite;
   animation: pulse 1.3s infinite;
   -webkit-transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);*/
 }
+
+@keyframes "scroller" {
+  0% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+  50% {
+    bottom: 50px;
+    opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+  }
+  100% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+}
+
+@-moz-keyframes scroller {
+  0% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+  50% {
+    bottom: 50px;
+    opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+  }
+  100% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+}
+
+@-webkit-keyframes "scroller" {
+  0% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+  50% {
+    bottom: 50px;
+    opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+  }
+  100% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+}
+
+@-ms-keyframes "scroller" {
+  0% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+  50% {
+    bottom: 50px;
+    opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+  }
+  100% {
+    bottom: 30px;
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+  }
+}
+
 // Small screens
 
 /* Define mobile styles */
