--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1,64 +1,92 @@
 html {
-  font-size: 100%;
-  font-family: 'Open Sans', sans-serif;
+    font-size: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
-h1,h2,h3,h4,h5,h6 {
-  font-family: 'Open Sans', sans-serif;
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', sans-serif;
 }
+
 aside {
-  position: fixed;
-  float: left;
-  background: aqua;
-  width: 240px;
-  height: 100%;
-  left: -240px;
+    position: fixed;
+    float: left;
+    width: 240px;
+    height: 100%;
+    left: -240px;
+    background: #3f3f3f;
+    color: #fff;
+    z-index: 30;
 
-  background: #3f3f3f;
-  color: #fff;
-  z-index: 30;
-
-  padding-top: 40px;
+    padding-top: 40px;
 }
+
 aside h1 {
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 800;
-  font-size: 1.25em;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 1.25em;
 }
+
 aside.open {
-  left: 0;
+    left: 0;
 
 }
 
 #aside-fade {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  pointer-events: none;
-  cursor: pointer;
-  z-index: 20;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    cursor: pointer;
+    z-index: 20;
 
 }
+
 #aside-fade.open {
-pointer-events: auto;
-  background: rgba(0,0,0,0.6);
+    pointer-events: auto;
+    background: rgba(0, 0, 0, 0.6);
 
 }
-
 
 header {
-  height: 100%;
-  background: #0562dc;
+    height: 100%;
+    background: #0562dc;
+}
+
+header .content {
+    position: absolute;
+    transform-style: preserve-3d;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+header h1 {
+    font-weight: 800;
+    color: #FFFFFF;
+    font-size: 6em;
+    margin: 0;
+}
+
+header h3 {
+    color: #FFFFFF;
+    font-size: 4em;
+}
+
+header i {
+    color: #FFFFFF;
+    font-size: 4em;
+    margin-right: 0.2em;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  color: #333;
-  font-size: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    color: #333;
+    font-size: 1rem;
 }
 
 .day {
@@ -72,141 +100,160 @@ body {
 }
 
 p {
-  font-weight: 300;
-  font-size: 1.25rem;
+    font-weight: 300;
+    font-size: 1.25rem;
 }
 
 article {
-  border-bottom: 2px solid #f2f2f2;
-  margin-top: 50px;
-}
-article .content h2 {
-  font-weight: 800;
-  color: #000;
-  font-size: 2rem;
-  text-align: left;
-  margin: 26.50px 0 15px 0;
+    border-bottom: 2px solid #f2f2f2;
+    margin-top: 50px;
 }
 
+article .content h2 {
+    font-weight: 800;
+    font-size: 2rem;
+    text-align: left;
+    margin: 26.50px 0 15px 0;
+}
 
 footer {
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
+
 footer .tags a {
-  border-radius: 5px;
-  border: 1px solid #008CBA;
-  padding: 2px 10px;
+    border-radius: 5px;
+    border: 1px solid #008CBA;
+    padding: 2px 10px;
 }
 
 .scroller {
-  font-size: 42px;
-  width: 100%;
-  left: 0;
-  text-align: center;
-  bottom: 50px;
-  display: block;
-  position: absolute;
-  color: #ffffff;
-  cursor: pointer;
+    font-size: 42px;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    bottom: 50px;
+    display: block;
+    position: absolute;
+    color: #ffffff;
+    cursor: pointer;
 }
 
 .scroller {
-  -webkit-animation: scroller 1.5s infinite; /* Safari 4+ */
-  -moz-animation:    scroller 1.5s infinite; /* Fx 5+ */
-  -o-animation:      scroller 1.5s infinite; /* Opera 12+ */
-  animation:         scroller 1.5s infinite; /* IE 10+, Fx 29+ */
-  /*-webkit-animation: pulse 1.3s infinite;
-  animation: pulse 1.3s infinite;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);*/
+    -webkit-animation: scroller 1.5s infinite; /* Safari 4+ */
+    -moz-animation: scroller 1.5s infinite; /* Fx 5+ */
+    -o-animation: scroller 1.5s infinite; /* Opera 12+ */
+    animation: scroller 1.5s infinite; /* IE 10+, Fx 29+ */
+    /*-webkit-animation: pulse 1.3s infinite;
+    animation: pulse 1.3s infinite;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);*/
 }
 
 @keyframes "scroller" {
-  0% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
-  50% {
-    bottom: 50px;
-    opacity: 1;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-  }
-  100% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
+    0% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
+    50% {
+        bottom: 50px;
+        opacity: 1;
+        filter: alpha(opacity=100); /* For IE8 and earlier */
+    }
+    100% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
 }
 
 @-moz-keyframes scroller {
-  0% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
-  50% {
-    bottom: 50px;
-    opacity: 1;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-  }
-  100% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
+    0% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
+    50% {
+        bottom: 50px;
+        opacity: 1;
+        filter: alpha(opacity=100); /* For IE8 and earlier */
+    }
+    100% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
 }
 
 @-webkit-keyframes "scroller" {
-  0% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
-  50% {
-    bottom: 50px;
-    opacity: 1;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-  }
-  100% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
+    0% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
+    50% {
+        bottom: 50px;
+        opacity: 1;
+        filter: alpha(opacity=100); /* For IE8 and earlier */
+    }
+    100% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
 }
 
 @-ms-keyframes "scroller" {
-  0% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
-  50% {
-    bottom: 50px;
-    opacity: 1;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-  }
-  100% {
-    bottom: 30px;
-    opacity: 0.4;
-    filter: alpha(opacity=40); /* For IE8 and earlier */
-  }
+    0% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
+    50% {
+        bottom: 50px;
+        opacity: 1;
+        filter: alpha(opacity=100); /* For IE8 and earlier */
+    }
+    100% {
+        bottom: 30px;
+        opacity: 0.4;
+        filter: alpha(opacity=40); /* For IE8 and earlier */
+    }
 }
-
-// Small screens
 
 /* Define mobile styles */
 @media only screen {
-  article .content h2 {
-    text-align: center;
-  }
+    article .content h2 {
+        text-align: center;
+    }
 
 }
 
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 @media only screen and (max-width: 40em) {
-  article .content h2 {
-    text-align: center;
-  }
+    article .content h2 {
+        text-align: center;
+    }
+}
+
+
+/* Did I say MATERIAL ? */
+.shadow-1 {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.shadow-2 {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.shadow-3 {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.shadow-4 {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.shadow-5 {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+.card {
+    border-radius: 2px;
 }
