--- a/src/resources/css/theme.css
+++ b/src/resources/css/theme.css
@@ -12,7 +12,6 @@ a:hover {
 }
 
 
-
 header {
     background: #3F51B5;
 }
@@ -20,7 +19,7 @@ header {
 
 
 aside {
-    background: #f5f5f5;
+    background: #FAFAFA;
 }
 aside h1 {
     color: #424242;
