--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -18,6 +18,19 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
 }
 
+ul {
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+pre {
+    background: #EEEEEE;
+    padding: 15px 17px;
+    display: block;
+    margin-bottom: 1.25rem;
+    font-weight: 300;
+}
+
 aside {
     position: fixed;
     float: left;
