--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -10,7 +10,7 @@ body {
     font-size: 1rem;
 }
 
-a:hover, a:active {
+a:hover, a:active, a:visited {
     text-decoration: none;
 }
 
@@ -125,6 +125,7 @@ p {
 article {
     border-bottom: 2px solid #f2f2f2;
     margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 article .content h2 {
@@ -137,14 +138,22 @@ article .content h3 {
     font-weight: 800;
     font-size: 1.8rem;
     text-align: left;
-    margin: 23px 0 10px 0;
+    margin: 35px 0 10px 0;
+}
+article blockquote {
+    border-left: 3px solid #DDD;
+    padding:1rem 1.25rem 1rem 1.1875rem;
 }
 
-footer {
+article blockquote footer {
+    margin-bottom: 0px;
+    font-style: italic;
+}
+article footer {
     margin-bottom: 50px;
 }
 
-footer .tags a {
+article footer .tags a {
     border-radius: 5px;
     text-decoration: none;
     padding: 2px 10px;
