--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -2,13 +2,40 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Language" content="pt-br">
-<link rel="shortcut icon" href="/favicon.ico?v=4" />
+<link rel="shortcut icon" href="/favicon.ico?v=4"/>
 
-<!-- Foundation -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/normalize.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css" rel="stylesheet">
+<!-- Font -->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800,400' rel='stylesheet' type='text/css'>
 
-<!-- build:css resources/css/style.min.css -->
-<link href="resources/css/main.css" rel="stylesheet">
-<link href="resources/css/theme.css" rel="stylesheet">
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+
+
+
+<!-- build:css resources/css/vendor.css -->
+<link href="../bower_components/normalize.css/normalize.css" rel="stylesheet"/>
+<link href="../bower_components/foundation/css/foundation.min.css" rel="stylesheet"/>
+<link href="../bower_components/foundation-icon-fonts/foundation-icons.css" rel="stylesheet"/>
+<!-- endbuild -->
+
+<!-- build:js resources/js/vendor.js -->
+<script src="../bower_components/modernizr/modernizr.js"></script>
+<script src="../bower_components/foundation/js/foundation.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:css resources/css/style.css -->
+<link href="resources/css/main.css" rel="stylesheet"/>
+<link href="resources/css/modules/menu-btn.css" rel="stylesheet"/>
+<link href="resources/css/theme.css" rel="stylesheet"/>
+<!-- endbuild -->
+
+
+<!-- Bootstrap Icons -->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+
+<!-- build:js resources/js/app.js-->
+<script src="resources/js/app.js"></script>
+<script src="resources/js/modules/menu-btn.js"></script>
 <!-- endbuild -->
