--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -7,12 +7,11 @@
 <!-- Font -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800,400' rel='stylesheet' type='text/css'>
 
-
-<!-- build:css resources/css/vendor.css -->
-<link href="../bower_components/normalize.css/normalize.css" rel="stylesheet"/>
-<link href="../bower_components/foundation/css/foundation.min.css" rel="stylesheet"/>
-<link href="../bower_components/foundation-icon-fonts/foundation-icons.css" rel="stylesheet"/>
-<!-- endbuild -->
+<!-- Bootstrap Icons -->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet"/>
 
 <!-- build:css resources/css/style.css -->
 <link href="resources/css/main.css" rel="stylesheet"/>
@@ -21,6 +20,4 @@
 <!-- endbuild -->
 
 
-<!-- Bootstrap Icons -->
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
