--- a/src/includes/menu.html
+++ b/src/includes/menu.html
@@ -10,9 +10,9 @@
         <div class="">
             <nav id="navigation">
                 <ul>
-                    <li><a>Home</a></li>
-                    <li><a>Sobre mim</a></li>
-                    <li><a>Contato</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Sobre mim</a></li>
+                    <li><a href="/">Contato</a></li>
                 </ul>
             </nav>
         </div>
