--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -255,21 +255,6 @@ article footer .tags a {
     }
 }
 
-/* Define mobile styles */
-@media only screen {
-    article .content h2 {
-        text-align: center;
-    }
-
-}
-
-/* max-width 640px, mobile-only styles, use when QAing mobile issues */
-@media only screen and (max-width: 40em) {
-    article .content h2 {
-        text-align: center;
-    }
-}
-
 
 /* Did I say MATERIAL ? */
 .shadow-1 {
@@ -285,4 +270,50 @@ article footer .tags a {
     border-radius: 2px;
     background: #FFF;
     padding: 1rem 2rem;
+}
+
+
+
+/* Define mobile styles */
+@media only screen {
+    article .content h2 {
+        text-align: center;
+    }
+
+}
+
+
+/* max-width 640px, mobile-only styles, use when QAing mobile issues */
+@media only screen and (max-width: 40em) {
+    article .content h2 {
+        text-align: center;
+    }
+    
+    h4 {
+        font-size: 1.43rem;
+    }
+
+
+    header h1 {
+        font-size: 3em;
+    }
+
+    header h3 {
+        font-size: 2em;
+    }
+
+    header i {
+        font-size: 2em;
+    }
+
+    header .scroller {
+        font-size: 2em;
+    }
+
+
+    .card {
+        padding: 0;
+    }
+
+    
 }
