--- a/src/resources/css/theme.css
+++ b/src/resources/css/theme.css
@@ -5,7 +5,7 @@ a, a:active, a:visited, a:visited {
     color: #3F51B5;
 }
 a:hover {
-    color: #3F51B5;
+    color: #283593;
 }
 strong {
     color: #EF6C00;
