--- a/src/includes/menu.html
+++ b/src/includes/menu.html
@@ -11,7 +11,7 @@
             <nav id="navigation">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/about">Sobre mim</a></li>
+                    <li><a href="/about.html">Sobre mim</a></li>
                     <!--<li><a href="/">Contato</a></li>-->
                 </ul>
             </nav>
